--- a/src/problem5/package.json
+++ b/src/problem5/package.json
@@ -25,8 +25,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.5",
-    "@prisma/adapter-better-sqlite3": "^7.3.0",
-    "@prisma/adapter-libsql": "^7.3.0",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@sinclair/typebox": "^0.34.48",
     "dotenv": "^17.2.3",
