--- a/src/problem5/docker-compose.yml
+++ b/src/problem5/docker-compose.yml
@@ -39,6 +39,81 @@ services:
     networks:
       - app-network
 
+  # OpenTelemetry Collector
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:0.115.1
+    container_name: problem5-otel-collector
+    restart: unless-stopped
+    command: ["--config=/etc/otelcol-contrib/config.yaml"]
+    volumes:
+      - ./otel-collector-config.yml:/etc/otelcol-contrib/config.yaml:ro
+    ports:
+      - "4318:4318"
+    depends_on:
+      loki:
+        condition: service_healthy
+      tempo:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  # Loki (log aggregation)
+  loki:
+    image: grafana/loki:3.3.2
+    container_name: problem5-loki
+    restart: unless-stopped
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    healthcheck:
+      test: ["CMD-SHELL", "wget --spider -q http://localhost:3100/ready || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+    networks:
+      - app-network
+
+  # Tempo (trace aggregation)
+  tempo:
+    image: grafana/tempo:2.7.2
+    container_name: problem5-tempo
+    restart: unless-stopped
+    command: ["-config.file=/etc/tempo.yaml"]
+    volumes:
+      - ./tempo-config.yml:/etc/tempo.yaml:ro
+      - tempo-data:/var/tempo
+    ports:
+      - "3200:3200"
+    healthcheck:
+      test: ["CMD-SHELL", "wget --spider -q http://localhost:3200/ready || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+    networks:
+      - app-network
+
+  # Grafana (visualization)
+  grafana:
+    image: grafana/grafana:11.4.0
+    container_name: problem5-grafana
+    restart: unless-stopped
+    ports:
+      - "30000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_USERS_ALLOW_SIGN_UP: "false"
+    volumes:
+      - ./grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml:ro
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - loki
+      - tempo
+    networks:
+      - app-network
+
   # Backend API
   app:
     build:
@@ -55,11 +130,15 @@ services:
       THROTTLE_TTL: 60
       REDIS_URL: redis://redis:6379
       PORT: 5000
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318
+      OTEL_SERVICE_NAME: problem5-api
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
+      otel-collector:
+        condition: service_started
     networks:
       - app-network
 
@@ -71,4 +150,8 @@ volumes:
   postgres-data:
     driver: local
   redis-data:
+    driver: local
+  tempo-data:
+    driver: local
+  grafana-data:
     driver: local
