--- a/src/problem5/tsconfig.json
+++ b/src/problem5/tsconfig.json
@@ -28,5 +28,5 @@
     // "verbatimModuleSyntax": true,
     "noEmit": true
   },
-  "include": ["src", "prisma/generated"]
+  "include": ["src", "prisma/generated", "test"]
 }
